# rustdbbench

./: .gitignore  LICENSE  README.md  build.sh  builddb.sh  docker-compose.yml  results.txt
db/: Cargo.toml  plan.md  readme.md
db/src/: main.rs
kv_benchmark/: Cargo.toml  build.rs
kv_benchmark/src/: benchmark.fbs  benchmark.proto  cli.rs  main.rs  main.txt  ws_server.rs
kv_benchmark/src/benchmark/: data.rs  mod.rs  nats_pubsub.rs  pubsub.rs  runner.rs  ws.rs
kv_benchmark/src/db/: in_memory.rs  mod.rs  redis.rs
