[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.86"
rustc-hash = "1.1.0"
async-trait = "0.1.80"
clap = { version = "4.5.40", features = ["derive"] }
bytes = "1.6.0"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0