[package]
name = "kv_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.32.2", features = ["tokio-comp"] }
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.8.5"
indicatif = "0.17.11"
hdrhistogram = "7.5.4"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
byte-unit = "5.1.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
bitcode = { version = "0.5.0", features = ["serde"] }
prost = "0.12.3"
prost-build = "0.12"
# CORRECTED: Enable the `alloc` feature for rkyv to support heap-allocated types
rkyv = { version = "0.8.10", features = ["alloc"] }
rkyv_derive = "0.8.10"
zstd = "0.13.1"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0

[build-dependencies]
prost-build = "0.12.3"